--- a/tables/accu-tab.tex
+++ b/tables/accu-tab.tex
@@ -1,6 +1,9 @@
+
 \begin{tabular}{|l|c|c|c|}
 \hline
 \textbf{80\%-20\%} & XGBoost & SVC & NN\\
+\hline
+\# of Combinations & 768 & 512 & 432 \\
 \hline
 \hline
 Default Accuracy & 95.65\% & 21.77\% & 79.53\%\\
